# app/controllers/api/v1/utbk_file_uploads_controller.rb
@@ -1,13 +1,24 @@
 module Api
   module V1
     class UtbkFileUploadsController < ApplicationController
-      before_action :authorize_request, only: %i[create update]
+      before_action :authorize_request, only: %i[create update show]
       before_action :fill_utbk_file_upload, only: %i[create]
-      before_action :current_utbk_file_upload, only: %i[update]
+      before_action :current_utbk_file_upload, only: %i[update show]
+
+      def show
+        @utbk_file_upload = UtbkFileUpload.find_by(id: params[:id])
+        if @utbk_file_upload
+          render json: {sertifikat_utbk: url_for(@utbk_file_upload.sertifikat_utbk)},
+            status: :ok
+        else
+          render json: {errors: 'utbk file upload not found'},
+            status: :not_found
+        end
+      end
 
       def create
-        @utbk_file_upload = @current_user.build_utbk_file_upload
-        @utbk_file_upload.sertifikat_utbk.attach(utbk_file_upload_params[:sertifikat_utbk])
+        @utbk_file_upload = @current_user.build_utbk_file_upload(utbk_file_upload_params)
+        @utbk_file_upload.sertifikat_utbk.attach(params[:sertifikat_utbk])
         if @utbk_file_upload.save
           render json: {
             message: 'utbk file upload created',
@@ -21,8 +32,8 @@ module Api
 
       def update
         @utbk_file_upload = @current_user.utbk_file_upload
-        if utbk_file_upload_params[:sertifikat_utbk].present?
-          @utbk_file_upload.sertifikat_utbk.attach(utbk_file_upload_params[:sertifikat_utbk])
+        if params[:sertifikat_utbk].present?
+          @utbk_file_upload.sertifikat_utbk.attach(params[:sertifikat_utbk])
         end
 
         if @utbk_file_upload.save
